crates/client/src/client/schema/snapshots/fuel_core_client__client__schema__coins__tests__coins_connection_query_gql_output.snap
---
source: crates/client/src/client/schema/coins.rs
expression: operation.query
---
query($filter: CoinFilterInput!, $after: String, $before: String, $first: Int, $last: Int) {
  coins(filter: $filter, after: $after, before: $before, first: $first, last: $last) {
    edges {
      cursor
      node {
        amount
        blockCreated
        assetId
        utxoId
        maturity
        owner
        status
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}


